--- a/styleTest.css
+++ b/styleTest.css
@@ -17,8 +17,7 @@ li {
 }
 
 html {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
+    font-family: 'Varela Round', sans-serif;}
 
 .header_banner h1,
 .header_banner li {
