--- a/style_slide.css
+++ b/style_slide.css
@@ -5,7 +5,7 @@ body {
 * {
     box-sizing: border-box;
 }
-    
+
 
 .slideContainer img {
     vertical-align: middle;
@@ -45,11 +45,9 @@ body {
     left: 0;
 }
 
-.Caption {
+.text {
     color: black;
-    font-weight: bold;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 25px;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
