--- a/style_slide.css
+++ b/style_slide.css
@@ -2,9 +2,7 @@ body {
     background-color: #5E5C5E;
 }
 
-* {
-    box-sizing: border-box;
-}
+
 
 
 .slideContainer img {
@@ -16,32 +14,45 @@ body {
 }
 
 .slideContainer {
+    box-sizing: border-box;
     max-width: 550px;
     height: 600px;
     position: relative;
     margin: auto;
     background-color: #EDEFE9;
-    text-align: center;
-    
+    text-align: center; 
 }
+
+.slide{ 
+    opacity: 0.8;
+    transition: all 0.5s ease-in-out;
+}
+
+.active{
+    opacity: 1;
+}
+
+
 
 .prevBtn,
 .nextBtn {
     position: absolute;
-    top: 50%;
+    top: 45%;
     width: auto;
     padding: 10px;
     background-color:#74D14C;
     color:black;
     font-weight: bolder;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .nextBtn {
+    cursor: pointer;
     right: 0;
 }
 
 .prevBtn{
+    cursor: pointer;
     left: 0;
 }
 
@@ -55,8 +66,7 @@ body {
     text-align: center;
 }
 
-.Navdot {
-    cursor: pointer;
+.navdot { 
     height: 15px;
     width: 15px;
     margin: 0 2px;
@@ -66,8 +76,12 @@ body {
     transition: background-color 0.6s ease;
 }
 
-.selected,
-.Navdot:hover {
+div.dots{
+    text-align:center;
+}
+
+.selected
+{
     background-color: #78968F;
 }
 
