--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 body {
   background-color: #5e5c5e;
   font-family: "Varela Round";
+
 }
+
+
+/* Responsive layout - makes a one column-layout instead of a two-column layout */
+
+
 
 #navbar {
   background-color: #232325;
@@ -10,7 +16,11 @@ body {
   margin: -8px;
   position: fixed;
   width: 100%;
+  
+  
 }
+
+
 
 #navbar img {
   display: block;
@@ -28,14 +38,32 @@ body {
   word-spacing: 40px;
   right: 100px;
   position: fixed;
-}
+  }
+
 
 #navbarlinks a {
   color: #edefe9;
   text-decoration: none;
   font-size: 1em;
+  
+  justify-content: space-between;
 }
 
 #navbarlinks a:hover {
   color: #74d14c;
 }
+
+.about-section {
+  margin-top: 50px;
+  font-family: "Varela Round";
+  margin-left: auto;
+  margin-right: auto;
+  width: 901px; /*100%?*/
+  height: 417px;
+  padding: 50px;
+  text-align: center;
+  background-color: #EDEFE9;
+  color: #232325;
+}
+
+
