la till slideshow

--- a/style_slide.css
+++ b/style_slide.css
@@ -46,7 +46,7 @@
 
 .text {
     color: black;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Varela Round";
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
