la till fade animation på slide

--- a/style_slide.css
+++ b/style_slide.css
@@ -75,11 +75,19 @@ div.dots{
     background-color: #78968F;
 }
 
-/*@media only screen and (max-width: 450px) {
-
-    .prevBtn,
-    .nextBtn,
-    .Caption {
-        font-size: 16px;
-    }
-}*/
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .5}
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .5}
+    to {opacity: 1}
+  }
