--- a/style.css
+++ b/style.css
@@ -59,11 +59,38 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 950px; /*100%?*/
-  height: 800px;
+  height:550px;
   padding: 50px;
   text-align: center;
   background-color: #EDEFE9;
   color: #232325;
+  border: 3px solid #78968F;
 }
 
+
+
+#backdrop {
+
+  background-color: #EDEFE9;
+  width: 500px;
+  text-align: center;
+  display: grid;
+  margin: auto;
+  top: 20px;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.box1{
+  border-bottom: 3px solid #78968F;
+  
+  
+}
+
+.select_container {
+  position: relative;
+  text-align: center;
+  
+
+}
 
