--- a/style.css
+++ b/style.css
@@ -51,13 +51,12 @@ body {
   font-family: "Varela Round";
   margin-left: auto;
   margin-right: auto;
-  width: 950px; /*100%?*/
-  height: 550px;
+  width: 400px; /*100%?*/
+  height: 500px;
   padding: 50px;
-  text-align: center;
+  text-align: left;
   background-color: #edefe9;
   color: #232325;
-  border: 3px solid #78968f;
 }
 
 #backdrop {
